# PhysicsLab

./: .gitignore  README.md  pyproject.toml
MeterModification/: graph_mm.ipynb  processing_mm.py
MeterModification/processed_data/: 电压表改装记录表.csv  电流表改装记录表.csv
MeterModification/source_data/: 欧姆表改装记录表.csv  电压表改装记录表.csv  电流表改装记录表.csv
ThermalResistor/: graph.ipynb  graph_tr.ipynb  processed_data.csv  processing.py  source_data.csv
ViscosityMeasurement/: processing_vm.py
ViscosityMeasurement/processed_data/: steel_ball_diameters.csv  steel_ball_fall_time.csv  test_tube_diameters.csv  timer_distance.csv
ViscosityMeasurement/source_data/: steel_ball_fall_time.csv  test_tube_diameters.csv  timer_distance.csv
data/raw/e-beam_deflection_analysis/: elec_deflection_y_data.csv  elec_focus_data.csv  em_ratio_mag_focus_01.csv  mag_deflection_data.csv
data/raw/e_beam_deflection_analysis/: elec_deflection_y_data.csv  elec_focus_data.csv  em_ratio_mag_focus.csv  mag_deflection_data.csv
data/raw/e_field_mapping/: equipotential_mapping_data.csv
data/raw/meter_modification/: i_meter.csv  ohm_meter.csv  v_meter.csv
data/raw/sucrose_polarimetry/: rotation_angles.csv
data/raw/themal_resistor/: source_data.csv
legacy/MeterModification/: graph_mm.py  processing_mm.py
legacy/ThermalResistor/: graph_tr.py  processing.py  processing_tr.py
legacy/ViscosityMeasurement/: graph.py
scripts/: process_e_beam_deflection_analysis.py  process_e_field_mapping.py  process_sucrose_polarimetry.py  process_thermal_resistor.py
src/physicslab/: data_utils.py  plot_utils.py
(+5 files in other folders)
