[project]
name = "PhysicsLab"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "keruth", email = "toiperus@sohu.com"},
    {name = "keruth", email = "k3ruth@outlook"},
]
dependencies = [
    "pandas>=2.3.1",
    "matplotlib>=3.10.5",
    "scipy>=1.16.1",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
